// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownFormatter base template output matches snapshot 1`] = `
"# Project Rules — Snapshot Test Project

These are version-specific coding rules for this project's dependencies. Follow them when writing, reviewing, or refactoring code.

## Project Context

- Frameworks: React
- State management: Redux
- Component style: functional
## Rules

### CRITICAL: Test Critical Rule

**react** | security

This is a critical security issue


---
### Test High Rule

**react** | performance

This is a high priority rule


---
### Test Medium Rule

**express** | best-practice

This is a medium priority rule



*Generated by Context Guardian v0.1.0 on 2024-01-01T00:00:00Z*
"
`;

exports[`MarkdownFormatter cursor template output matches snapshot 1`] = `
"# Project Rules — Snapshot Test Project

Follow these version-specific rules when writing, reviewing, or refactoring code in this project.

Frameworks: React
State management: Redux
## CRITICAL: Test Critical Rule

react

This is a critical security issue


## Test High Rule

react

This is a high priority rule


## Test Medium Rule

This is a medium priority rule


---
*Generated by Context Guardian v0.1.0 on 2024-01-01T00:00:00Z*
"
`;

exports[`MarkdownFormatter offline mode output matches snapshot 1`] = `
"# Project Rules — Offline Project

These are version-specific coding rules for this project's dependencies. Follow them when writing, reviewing, or refactoring code.

## Project Context

- Frameworks: React
- State management: Redux
- Component style: functional
## Rules

### CRITICAL: Test Critical Rule

**react** | security

This is a critical security issue


---
### Test High Rule

**react** | performance

This is a high priority rule


---
### Test Medium Rule

**express** | best-practice

This is a medium priority rule



*Generated by Context Guardian v0.1.0 on 2024-01-01T00:00:00Z*
"
`;
